# 24.-Emulador-de-Spectrum

./: CLAUDE.md  README.md  index.html  pyproject.toml
src/spectrum_tape_decoder/: __init__.py  cli.py  decoder.py  wav_reader.py
tests/: test_decoder.py
