[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "spectrum-tape-decoder"
version = "0.1.0"
description = "Decoder inicial para audio de cintas de ZX Spectrum."
readme = "README.md"
requires-python = ">=3.11"

[project.scripts]
spectrum-tape-decoder = "spectrum_tape_decoder.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
